AV2 Changelog :: version a4.0

+ Ability Level System
+ New skills menu
+ Scrolls item

- Removed progression points
- Internal: removed bending states

* Remove small space between radial segment hover
* Abilities have multiple levels + xp instead of only 1 XP bar
* Adjusted xp curves based on level
* Generally triple xp gains to account for levels
* Airblade and airgust, by default, have less push

> Fix airblade weird angles