@@ -3,6 +3,7 @@ AV2 Changelog :: version a4.0
 + Ability Level System
 + New skills menu
 + Scrolls item
++ Level IV options for each ability
 
 - Removed progression points
 - Internal: removed bending states
@@ -12,5 +13,6 @@ AV2 Changelog :: version a4.0
 * Adjusted xp curves based on level
 * Generally triple xp gains to account for levels
 * Airblade and airgust, by default, have less push
+* Airblade can chop flowers, etc. at level II
 
 > Fix airblade weird angles
